--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
+    "react-swipeable": "^7.0.2",
+    "swiper": "^11.2.6",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
