--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.475.0",
     "react": "^19.1.0",
+    "react-calendar": "^5.1.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
