--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "axios": "^1.8.4",
     "debug": "^4.4.0",
     "fuse.js": "^7.1.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "react": "^19.1.0",
     "react-calendar": "^5.1.0",
@@ -21,6 +23,7 @@
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.0",
     "react-swipeable": "^7.0.2",
     "swiper": "^11.2.6",
@@ -28,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/leaflet": "^1.9.17",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
