--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.3"
   }
 }
